--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "amqplib": "^0.10.9",
+    "axios": "^1.12.2",
     "dotenv": "^17.2.3",
+    "mongoose": "^8.19.1",
     "node-cron": "^3.0.3",
     "redis": "^4.6.7"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.7",
     "@types/node": "^20.3.1",
     "@types/node-cron": "^3.0.11",
     "ts-node-dev": "^2.0.0",
